Fixed homepage padding on mobile

--- a/wp-content/themes/epik/assets/sass/_orig-styles.scss
+++ b/wp-content/themes/epik/assets/sass/_orig-styles.scss
@@ -467,13 +467,6 @@ img.small-fabrics-icon {
 
 /* .PRIMARY-SIDEBAR CUSTOMIZATION START [x29] -------------------------------------------- */
 
-.sidebar-primary {
-	float: right;
-	/*width: 360px;*/
-	width: 300px;
-	margin-left: 10px;
-	background: none; }
-
 .sidebar .widget-wrap {
 	margin: 6px 0 0 0;
 	padding: 0 0 8px 0; }
@@ -508,15 +501,6 @@ img.small-fabrics-icon {
 	height: 52px;
 	margin: 1px 10px 4px 0; }
 
-/*! Secondary Sidebar NOT USED */
-
-.sidebar-secondary {
-	float: left;
-	width: 180px; }
-
-.content-sidebar-sidebar .sidebar-secondary {
-	float: right;
-}
 
 /*! .HOME CUSTOMIZATION START [x21] -------------------------------------------- */
 
@@ -2045,18 +2029,6 @@ Widgets
 
 .featured-content .entry-title a {
 	border: none; }
-
-
-
-
-
-
-
-
-
-
-
-
 /*!
 Content Area
 ---------------------------------------------------------------------------------------------------- */
@@ -2435,177 +2407,6 @@ Miscellaneous
 
 }
 
-/*! iPad/Tablets (portrait and landscape)
---------------------------------------------- */
-
-@media only screen and (max-width: 960px) {
-
-	.feature-margin {
-		margin: 0;
-	}
-
-}
-
-/*! iPhones (portrait and landscape) [x40]
---------------------------------------------- */
-
-@media only screen and (max-width: 767px) {
-
-	.home-feature-3,
-	.home-feature-4,
-	.home-bottom-sidebar-1,
-	.home-bottom-sidebar-2,
-	.home-bottom-sidebar-3,
-	.home-bottom-sidebar-4,
-	.footer-widgets-1,
-	.footer-widgets-2,
-	.footer-widgets-3,
-	.five-sixths,
-	.four-fifths,
-	.four-sixths,
-	.one-fifth,
-	.one-fourth,
-	.one-half,
-	.one-sixth,
-	.one-third,
-	.three-fifths,
-	.three-fourths,
-	.three-sixths,
-	.two-fifths,
-	.two-fourths,
-	.two-sixths,
-	.two-thirds {
-		margin: 0;
-		width: 100%;
-	}
-
-
-
-.home-feature-4 {
-	font-size: 18px;
-	letter-spacing: .1em;
-	color: #79A;
-	padding-bottom: 8px; }
- /*!--------*/
-.hf8 {
-	font-size: 18px;
-	letter-spacing: .1em;
-	color: #79A;
-	margin: 10px 0; }
- /*!--------*/
-.hf14 .head {
-	font-size: 18px;
-	letter-spacing: .1em;
-	color: #FFF;
-	margin: 10px 0; }
- /*!--------*/
-.home-feature-bg-alt .featuredpage .page, .home-feature-bg-alt .featuredpost .post {
-	width: 100%;
-	padding: 0 1.5em 0 0; }
- /*!--------*/
-.home-feature-bg-dark .wrap { padding: 5px; }
-/*!---------*/
-.tp-caption.NotGeneric-SubTitle, .NotGeneric-SubTitle { display: none; }
-/*!----------*/
-.wpsstt_btn { margin: 4px; }
- /*!---PK---*/
-
-
-
-
-	.feature-left,
-	.feature-right {
-		width: 45%;
-	}
-
-	.home-feature-10,
-	.home-feature-12 {
-		width: 48%;
-	}
-
-	.home-feature-11,
-	.home-feature-13 {
-		float: right;
-		margin: 0;
-		width: 48%;
-	}
-
-	.home-feature-12 {
-		clear: both;
-	}
-
-	.search-form {
-		width: 80%;
-	}
-
-	.content .portfolio {
-		width: 48%;
-	}
-
-	.content .portfolio .post-image {
-		width: 100%;
-	}
-
-	.home-feature-10 img,
-	.home-feature-11 img,
-	.home-feature-12 img,
-	.home-feature-13 img {
-		width: 100%;
-	}
-
-	.plan-col,
-	.plan-col-popular {
-		float: none;
-		margin: 0 auto 40px;
-		width: 80%;
-	}
-
-}
-
-@media only screen and (max-width: 580px) {
-
-	.home .wrap {
-		text-align: none;
-	}
-
-	.home-feature-1,
-	.home-feature-2,
-	.home-feature-3,
-	.home-feature-4,
-	.home-feature-1,
-	.home-feature-2,
-	.home-feature-3,
-	.home-feature-4,
-	.home-feature-5,
-	.home-feature-6,
-	.home-feature-7,
-	.home-feature-8,
-	.home-feature-9,
-	.home-feature-10,
-	.home-feature-11,
-	.home-feature-12,
-	.home-feature-13,
-	.home-feature-14 {
-		margin: 0 auto;
-	    text-align: center;
-	    width: 100%;
-	}
-
-	.feature-left {
-		float: none;
-		margin: 0 auto;
-		text-align: center;
-		width: 100%;
-	}
-
-	.feature-right {
-		float: none;
-		margin: 40px auto 0;
-		text-align: center;
-		width: 100%;
-	}
-
-}
 
 @media only screen and (max-width: 480px) {
 
