--- a/wp-content/themes/epik/assets/sass/base/_grid-settings.scss
+++ b/wp-content/themes/epik/assets/sass/base/_grid-settings.scss
@@ -9,12 +9,14 @@
 // Neat Breakpoints
 $small-screen: 480px;
 $medium-screen: 600px;
+$ipad-screen: 768px;
 $large-screen: 800px;
 $xlarge-screen: 1023px;
 $xxlarge-screen: 1180px;
 
 $small-screen-up: new-breakpoint(max-width $small-screen 4);
 $medium-screen-up: new-breakpoint(max-width $medium-screen 4);
+$ipad-screen-up: new-breakpoint(max-width $ipad-screen 8);
 $large-screen-up: new-breakpoint(max-width $large-screen 8);
 $xlarge-screen-up: new-breakpoint(max-width $xlarge-screen 12);
 $xxlarge-screen-up: new-breakpoint(max-width $xxlarge-screen 12);
